# image-feature-comparison

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  histogram.py  opencv.md
examples/: README.md
output/: output.AKAZE  output.BRISK  output.FREAK  output.ORB  output.SIFT  output.SURF
src/: ft.cc  ft.h  main.cc
testing/: output.AKAZE  output.BRISK  output.FREAK  output.ORB  output.SIFT  output.SURF
