cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -g")
project(feature_tracker.out)
find_package(gflags REQUIRED)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(feature_tracker.out src/main.cc src/ft.cc)
SET(libs gflags)
target_link_libraries(feature_tracker.out ${OpenCV_LIBS} ${libs} opencv_xfeatures2d)
